# mivel_chat_app

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md  STYLE_GUIDE.md  art.txt  license.txt
backend/: .gitignore  docker-compose.yml
backend/app/: Dockerfile  app.py  config.py  db.py  models.py  pyproject.toml  requirements.txt  setup.py  test_ping.py
backend/app/lib/: helper.py  jwt_helper.py
backend/db/init/: schema.sql
frontend/: about.html  chatSection.html  homepage.html  index.html  package-lock.json  package.json  roomPopupTemplate.html  roomSetting.html  style.html  test.html  userSetting.html
frontend/src/: index.js  template.js  translation.js
frontend/style/: style.css
